# todone

./: .gitignore  README.md  project_todo.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py
app/database/: db.py
app/database/mixins/: serializer.py
app/database/model/: __init__.py  action.py  task.py  user.py  user_connector.py
app/devtools/: populate_seed_data.py
github/workflows/: ci.yml
